--- a/netlify.toml
+++ b/netlify.toml
@@ -1,23 +1,16 @@
 [build]
-  command = "echo 'No build needed for static site'"
-  publish = "public"
+  command = "echo 'No build needed'"
+  publish = "."
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
 
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "SAMEORIGIN"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-
-[[headers]]
-  for = "*.html"
-  [headers.values]
-    Cache-Control = "no-cache"
-
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/.netlify/functions/proxy/:splat"
   status = 200
+  force = true
+
+[functions]
+  node_bundler = "esbuild"
